# aoc-2019-rust

./: Cargo.toml
src/: util.rs
src/day/1/: main.rs
src/day/2/: main.rs
src/day/3/: main.rs
src/day/4/: main.rs
src/day/5/: main.rs
