[package]
name = "aoc-2019-rust"
version = "0.1.0"
authors = ["Christopher-ymage <srDLYufXvTkzv5Ucaqc7>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day_1"
path = "src/day/1/main.rs"

[[bin]]
name = "day_2"
path = "src/day/2/main.rs"

[[bin]]
name = "day_3"
path = "src/day/3/main.rs"
